修改JDK版本为11,添加Maven的控制和将编译结果文件从仓库剔除